# MultiSig

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.coordinator  LICENSE  Makefile  README.md  docker-compose.yml  rustfmt.toml  store
.github/workflows/: test.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  miden_runtime.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/coordinator/domain/: Cargo.toml  README.md
crates/coordinator/domain/src/: account.rs  lib.rs  tx.rs  with_serde.rs
crates/coordinator/engine/: Cargo.toml  README.md
crates/coordinator/engine/src/: error.rs  lib.rs  miden_runtime.rs  multisig_client_runtime.rs
crates/coordinator/engine/src/miden_runtime/: error.rs
crates/coordinator/engine/src/multisig_client_runtime/: error.rs  msg.rs
crates/coordinator/engine/src/types/: request.rs  response.rs
crates/coordinator/engine/src/types/request/: error.rs
crates/coordinator/engine/tests/: multisig_engine_test.rs
crates/coordinator/store/: Cargo.toml  README.md
crates/coordinator/store/src/: error.rs  lib.rs
crates/coordinator/store/src/persistence/: store.rs
crates/coordinator/store/src/persistence/pool/: error.rs
crates/coordinator/store/src/persistence/record/: insert.rs  select.rs
crates/coordinator/utils/: Cargo.toml
crates/coordinator/utils/src/: address.rs  lib.rs  signature.rs
crates/miden-multisig-client/: Cargo.toml
crates/miden-multisig-client/src/: error.rs  lib.rs  tests.rs
crates/miden-multisig-client/src/tests/: test_utils.rs
crates/multisig-rust-client/: Cargo.toml
crates/multisig-rust-client/src/: lib.rs  tests.rs
crates/multisig-store/: Cargo.toml
crates/multisig-store/src/: queries.rs  store.sql
crates/rust-client/: Cargo.toml
crates/rust-client/src/: error.rs  lib.rs
crates/store/: Cargo.toml
crates/store/migrations/2025-08-03-205356_multisig/: down.sql  up.sql
crates/store/src/: errors.rs  lib.rs  persistence.rs
crates/store/src/persistence/: pool.rs  schema.rs  store.rs
crates/store/src/persistence/record/: insert.rs  select.rs
crates/store/src/persistence/store/: error.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
