[workspace.package]
edition = "2024"
publish = false
version = "0.0.1-pre"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code  = "forbid"

[workspace]
members = [
  "bin/coordinator/domain",
  "bin/coordinator/engine",
  "bin/coordinator/server",
  "bin/coordinator/store",
  "crates/*",
]
resolver = "3"

[workspace.dependencies]
miden-client                      = "0.11.9"
miden-multisig-client             = { path = "crates/miden-multisig-client" }
miden-multisig-coordinator-domain = { path = "bin/coordinator/domain" }
miden-multisig-coordinator-engine = { path = "bin/coordinator/engine" }
miden-multisig-coordinator-store  = { path = "bin/coordinator/store" }
miden-objects                     = "0.11"

anyhow          = "1"
bon             = { version = "3", default-features = false }
chrono          = { version = "0.4", default-features = false }
dissolve-derive = "0.1"
rand            = "0.9"
serde           = { version = "1", default-features = false }
thiserror       = { version = "2", default-features = false }
tokio           = { version = "1.40", default-features = false }
tracing         = "0.1"
url             = "2.5"
uuid            = { version = "1", default-features = false }
