[package]
name = "miden-multisig-api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = "0.7"
hyper = "1"
miden-multisig-store = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true, features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
