[package]
name = "miden-multisig-api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = "0.7"
const-hex = "1"
hyper = "1"
rand = { version = "0.9" }

miden-multisig-store = { workspace = true }
miden-client= { workspace = true, features = ["testing", "tonic", "sqlite"] }
miden-tx = {workspace=true}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
tokio = { workspace = true, features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = "0.3"
