[package]
description = "A rust client for Miden multisig wallets"
edition     = "2024"
license     = "MIT"
name        = "miden-multisig-client"
readme      = "README.md"
repository  = "https://github.com/0xMiden/MultiSig"
version     = "0.1.0"

[lints]
workspace = true

[dependencies]
miden-client  = { workspace = true, features = ["sqlite", "tonic"] }
miden-objects = { workspace = true }

anyhow    = "1.0"
rand      = { workspace = true }
thiserror = { workspace = true }
tokio     = { workspace = true, default-features = false }
url       = { workspace = true }

[dev-dependencies]
miden-client  = { version = "0.11", features = ["sqlite", "testing", "tonic"] }
miden-testing = "0.11"
