[package]
name = "multisig-rust-client"
version = "0.1.0"
edition = "2024"

[dependencies]
miden-client = "0.11.0"
miden-objects = "0.11.0"
miden-lib = "0.11.0"
miden-tx = "0.11.0"

rand = "0.9"
thiserror = { default-features = false, version = "2.0" }
tokio = { version = "1.40", default-features = false }

[dev-dependencies]
miden-client = { version = "0.11.0", features = ["testing", "sqlite"] }

[lints]
workspace = true
