[package]
name = "multisig-store"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7",default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
miden-client = { version = "0.10.0", features = [ "tonic", "sqlite"] }



serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"


