[package]
name = "miden-multisig-client"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
miden-client = { workspace = true }
miden-lib = "0.11"
miden-objects = "0.11"
miden-tx = { workspace = true }
rand = "0.9"
thiserror = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
miden-falcon-sign-test = { git = "https://github.com/rotorship/miden-falcon-sign-test.git" }
