[package]
edition.workspace = true
name              = "miden-multisig-test-utils"
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
miden-client              = { features = ["testing"], workspace = true }
miden-client-sqlite-store = { workspace = true }
miden-testing             = "0.12"
rand                      = { workspace = true }
