[package]
edition.workspace = true
name              = "miden-multisig-coordinator-store"
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bon                               = { workspace = true }
chrono                            = { workspace = true }
diesel                            = { version = "2", default-features = false, features = ["chrono", "uuid"] }
diesel-async                      = { version = "0.7", features = ["deadpool", "postgres"] }
dissolve-derive                   = { workspace = true }
futures                           = { version = "0.3", default-features = false }
miden-client                      = { workspace = true }
miden-multisig-coordinator-domain = { workspace = true }
miden-multisig-coordinator-utils  = { workspace = true }
miden-objects                     = { workspace = true }
oblux                             = "0.1"
rustls                            = { version = "0.23", default-features = false }
rustls-native-certs               = "0.8"
thiserror                         = { workspace = true }
tokio                             = { workspace = true, features = ["rt-multi-thread"] }
tokio-postgres                    = "0.7"
tokio-postgres-rustls             = "0.13"
tracing                           = { workspace = true }
uuid                              = { workspace = true }
