[package]
edition.workspace = true
name              = "miden-multisig-coordinator-utils"
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
miden-crypto  = "0.15"
miden-objects = { workspace = true }
miden-tx      = "0.11"
thiserror     = { workspace = true }

[dev-dependencies]
rand        = "0.9"
rand_chacha = "0.9"
